<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivityRegistro1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantallas.Pagina_QR">

    <ImageView
        android:id="@+id/flecha_atrasQR"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/flechaatras"
        app:layout_constraintBottom_toBottomOf="@+id/imagenLogoReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagenLogoReg" />


    <ImageView
        android:id="@+id/imagenLogoReg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/logotechcommit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotechcommit" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/bienvenido"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/escaneaqr"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        tools:layout_editor_absoluteX="20dp" />


    <Button
        android:id="@+id/vincular_sensor_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="Vincular sensor"
        android:enabled="false"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@+id/escaneo_QR"
        app:layout_constraintStart_toStartOf="@+id/escaneo_QR"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imagenparaqr"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/imagen_fondo"
            android:clickable="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/text_nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:riv_oval="true"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/addimagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/varela_round"
            android:text="@string/escanea_el_qr"
            android:textSize="12sp"></TextView>
    </FrameLayout>

    <EditText
        android:id="@+id/escaneo_QR"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_input"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="Código QR"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="50dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/qrcodigo"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/escaneo_qr"
        app:layout_constraintBottom_toBottomOf="@+id/escaneo_QR"
        app:layout_constraintEnd_toEndOf="@+id/escaneo_QR"
        app:layout_constraintTop_toTopOf="@+id/escaneo_QR"
        app:tint="#454545" />


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#ADEFEDED"
        android:hapticFeedbackEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/ya_tienes_cuenta"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/irAIniciarSesion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/irAIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/varela_round"
        android:text="@string/iniciar_sesion"
        android:textColor="#0E1375"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/he_le_do_la_pol_tica_de_privacidad"
        android:textColor="#454444"
        app:layout_constraintStart_toStartOf="@+id/escaneo_QR"
        app:layout_constraintTop_toBottomOf="@+id/escaneo_QR"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/politica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/pol_tica_de_privacidad"
        android:textColor="#59A8A8"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toTopOf="@+id/vincular_sensor_boton"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/escaneo_QR" />


</androidx.constraintlayout.widget.ConstraintLayout>