<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ActivityRegistro2"
    tools:context=".Pantallas.Pagina_Registro">

    <ImageView
        android:id="@+id/flecha_atrasRegistro"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/flechaatras"
        app:layout_constraintBottom_toBottomOf="@+id/imagenLogoReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagenLogoReg" />


    <ImageView
        android:id="@+id/imagenLogoReg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/logotechcommit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotechcommit" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/introduce_tus_datos_para_continuar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


<!--    <FrameLayout-->
<!--        android:id="@+id/frameLayout3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/textView10"-->
<!--        app:layout_constraintStart_toStartOf="@+id/textView10"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView10">-->

<!--        <com.makeramen.roundedimageview.RoundedImageView-->
<!--            android:id="@+id/imagenperfil"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:background="@drawable/imagen_fondo"-->
<!--            android:scaleType="centerCrop"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/text_nombre"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.498"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:riv_oval="true" />-->

<!--        <TextView-->
<!--            android:id="@+id/addimagen"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="@string/escanea_el_qr"-->
<!--            android:textSize="12sp"></TextView>-->
<!--    </FrameLayout>-->


    <EditText
        android:id="@+id/text_nombre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_input"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="Nombre"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <EditText
        android:id="@+id/correo2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_input"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:layout_marginTop="16dp"
        android:hint="@string/correo"
        android:includeFontPadding="true"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_nombre"
        app:layout_constraintStart_toStartOf="@+id/text_nombre"
        app:layout_constraintTop_toBottomOf="@+id/text_nombre" />

    <EditText
        android:id="@+id/contrasena2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_input"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/varela_round"
        android:hint="@string/contrase_a"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/correo2"
        app:layout_constraintStart_toStartOf="@+id/correo2"
        app:layout_constraintTop_toBottomOf="@+id/correo2" />

    <ImageView
        android:id="@+id/correo"
        android:layout_width="35dp"
        android:layout_height="26dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_correo"
        app:layout_constraintBottom_toBottomOf="@+id/correo2"
        app:layout_constraintEnd_toEndOf="@+id/correo2"
        app:layout_constraintTop_toTopOf="@+id/correo2"
        app:tint="#454545" />

    <Button
        android:id="@+id/botonRegistrarse"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#59a8a8"
        android:fontFamily="@font/varela_round"
        android:padding="10dp"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@+id/verificarContrasenya"
        app:layout_constraintStart_toStartOf="@+id/verificarContrasenya"
        app:layout_constraintTop_toBottomOf="@+id/verificarContrasenya" />

    <EditText
        android:id="@+id/verificarContrasenya"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_input"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/repetir_contrase_a"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/contrasena2"
        app:layout_constraintStart_toStartOf="@+id/contrasena2"
        app:layout_constraintTop_toBottomOf="@+id/contrasena2" />

    <ImageView
        android:id="@+id/verificarContrasenyaimg"
        android:layout_width="35dp"
        android:layout_height="26dp"
        android:src="@drawable/ic_candado"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/verificarContrasenya"
        app:layout_constraintEnd_toEndOf="@+id/verificarContrasenya"
        app:layout_constraintTop_toTopOf="@+id/verificarContrasenya"
        app:tint="#454545" />

    <ImageView
        android:id="@+id/Contrasenyaimg"
        android:layout_width="35dp"
        android:layout_height="26dp"
        android:src="@drawable/ic_candado"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/contrasena2"
        app:layout_constraintEnd_toEndOf="@+id/contrasena2"
        app:layout_constraintTop_toTopOf="@+id/contrasena2"
        app:tint="#454545" />

    <ImageView
        android:id="@+id/usuario"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_persona"
        app:layout_constraintBottom_toBottomOf="@+id/text_nombre"
        app:layout_constraintEnd_toEndOf="@+id/text_nombre"
        app:layout_constraintTop_toTopOf="@+id/text_nombre"
        app:tint="#454545" />


    <FrameLayout
        android:id="@+id/layoutimagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        tools:ignore="MissingConstraints">

    </FrameLayout>


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:layout_marginTop="10dp"
        android:text="@string/ya_queda_poco"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenLogoReg" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/registrofoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


</androidx.constraintlayout.widget.ConstraintLayout>